--- a/index.html
+++ b/index.html
@@ -235,19 +235,34 @@
                 <h2 class="clients-title">Постійні клієнти</h2>
                 <ul class="clients-list">
                     <li class="clients-item">
-                        <a href="#"><svg width="106" height="60">
-                            <use href="./images/symbol-defs.svg#icon-logo-1"></use>
+                        <a class="clients-link" href="#"><svg width="106" height="60">
+                            <use href="./images/symbol-defs.svg#icon-Logo-1"></use>
                         </svg></a>
                     </li>
-                    <li class="clients-item"><a href="#"></a>
+                    <li class="clients-item">
+                        <a class="clients-link" href="#"><svg width="106" height="60">
+                            <use href="./images/symbol-defs.svg#icon-Logo-2"></use>
+                    </svg></a>
                     </li>
-                    <li class="clients-item"><a href="#"></a>
+                    <li class="clients-item">
+                        <a class="clients-link" href="#"><svg width="106" height="60">
+                            <use href="./images/symbol-defs.svg#icon-Logo-3"></use>
+                    </svg></a>
                     </li>
-                    <li class="clients-item"><a href="#"></a>
+                    <li class="clients-item">
+                        <a class="clients-link" href="#"><svg width="106" height="60">
+                            <use href="./images/symbol-defs.svg#icon-Logo-4"></use>
+                    </svg></a>
                     </li>
-                    <li class="clients-item"><a href="#"></a>
+                    <li class="clients-item">
+                        <a class="clients-link" href="#"><svg width="106" height="60">
+                            <use href="./images/symbol-defs.svg#icon-Logo-5"></use>
+                    </svg></a>
                     </li>
-                    <li class="clients-item"><a href="#"></a>
+                    <li class="clients-item">
+                        <a class="clients-link" href="#"><svg width="106" height="60">
+                            <use href="./images/symbol-defs.svg#icon-Logo-6"></use>
+                    </svg></a>
                     </li>
                 </ul>
             </div>
@@ -257,15 +272,42 @@
     <!-- footer -->
 
     <footer class="footer">
-        <div class="container">
-            <a class="logo" href="./index.html">Web<span class="part">Studio</span></a>
-            <address class="address">
-                <ul class="address-list">
-                    <li><a class="link" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
-                    <li><a class="contact" href="#">info@devstudio.com</a></li>
-                    <li><a class="contact" href="#">+38 096 111 11 11</a></li>
+        <div class="container footer-nav">
+            <div>
+                <a class="logo" href="./index.html">Web<span class="part">Studio</span></a>
+                <address class="address">
+                    <ul class="address-list">
+                        <li><a class="link" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
+                        <li><a class="contact" href="#">info@devstudio.com</a></li>
+                        <li><a class="contact" href="#">+38 096 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div>
+                <h2 class="join-title">Приєднуйтесь</h2>
+                <ul class="join-list">
+                    <li class="join-item">
+                        <a class="join-link" href="#"><svg width="20" height="20">
+                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        </svg></a>
+                    </li>
+                    <li class="join-item">
+                        <a class="join-link" href="#"><svg width="20" height="20">
+                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        </svg></a>
+                    </li>
+                    <li class="join-item">
+                        <a class="join-link" href="#"><svg width="20" height="20">
+                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        </svg></a>
+                    </li>
+                    <li class="join-item">
+                        <a class="join-link" href="#"><svg width="20" height="20">
+                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        </svg></a>
+                    </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
