--- a/index.html
+++ b/index.html
@@ -26,8 +26,16 @@
                     </ul>
                 </nav>
                     <ul class="contact-list">
-                        <li><a class="contact envelope" href="#">info@devstudio.com</a></li>
-                        <li><a class="contact smartphone" href="#">+38 096 111 11 11</a></li>
+                        <li class="contact-item"><a class="contact envelope" href="mailto:info@devstudio.com">
+                            <svg width="16" height="12">
+                                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                            </svg>info@devstudio.com</a>
+                        </li>
+                        <li class="contact-item"><a class="contact smartphone" href="tel:+38 096 111 11 11">
+                            <svg width="10" height="16">
+                                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                            </svg>+38 096 111 11 11</a>
+                        </li>
                     </ul>
             </div>
         </div>
@@ -236,32 +244,32 @@
                 <ul class="clients-list">
                     <li class="clients-item">
                         <a class="clients-link" href="#"><svg width="106" height="60">
-                            <use href="./images/symbol-defs.svg#icon-Logo-1"></use>
+                            <use href="./images/symbol-defs.svg#icon-Logo1"></use>
                         </svg></a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link" href="#"><svg width="106" height="60">
-                            <use href="./images/symbol-defs.svg#icon-Logo-2"></use>
+                            <use href="./images/symbol-defs.svg#icon-Logo2"></use>
                     </svg></a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link" href="#"><svg width="106" height="60">
-                            <use href="./images/symbol-defs.svg#icon-Logo-3"></use>
+                            <use href="./images/symbol-defs.svg#icon-Logo3"></use>
                     </svg></a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link" href="#"><svg width="106" height="60">
-                            <use href="./images/symbol-defs.svg#icon-Logo-4"></use>
+                            <use href="./images/symbol-defs.svg#icon-Logo4"></use>
                     </svg></a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link" href="#"><svg width="106" height="60">
-                            <use href="./images/symbol-defs.svg#icon-Logo-5"></use>
+                            <use href="./images/symbol-defs.svg#icon-Logo5"></use>
                     </svg></a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link" href="#"><svg width="106" height="60">
-                            <use href="./images/symbol-defs.svg#icon-Logo-6"></use>
+                            <use href="./images/symbol-defs.svg#icon-Logo6"></use>
                     </svg></a>
                     </li>
                 </ul>
