--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 
     <!-- header -->
 
-    <header class="header">
+    <header class="header portfolio-page">
         <div class="container">
             <div class="header-section">
                 <nav class="header-nav">
@@ -26,8 +26,16 @@
                     </ul>
                 </nav>
                     <ul class="contact-list">
-                        <li><a class="contact" href="#">info@devstudio.com</a></li>
-                        <li><a class="contact" href="#">+38 096 111 11 11</a></li>
+                        <li class="contact-item"><a class="contact envelope" href="mailto:info@devstudio.com">
+                            <svg width="16" height="12">
+                                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                            </svg>info@devstudio.com</a>
+                        </li>
+                        <li class="contact-item"><a class="contact smartphone" href="tel:+38 096 111 11 11">
+                            <svg width="10" height="16">
+                                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                            </svg>+38 096 111 11 11</a>
+                        </li>
                     </ul>
             </div>
         </div>
@@ -101,16 +109,43 @@
 
     <!-- footer -->
 
-    <footer class="footer">
-        <div class="container">
-            <a class="logo" href="./index.html">Web<span class="part">Studio</span></a>
-            <address class="address">
-                <ul class="address-list">
-                    <li><a class="link" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
-                    <li><a class="contact" href="#">info@devstudio.com</a></li>
-                    <li><a class="contact" href="#">+38 096 111 11 11</a></li>
+    <footer class="footer portfolio-footer">
+        <div class="container footer-nav">
+            <div>
+                <a class="logo" href="./index.html">Web<span class="part">Studio</span></a>
+                <address class="address">
+                    <ul class="address-list">
+                        <li><a class="link" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
+                        <li><a class="contact" href="#">info@devstudio.com</a></li>
+                        <li><a class="contact" href="#">+38 096 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div>
+                <h2 class="join-title">Приєднуйтесь</h2>
+                <ul class="join-list">
+                    <li class="join-item">
+                        <a class="join-link" href="#"><svg width="20" height="20">
+                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        </svg></a>
+                    </li>
+                    <li class="join-item">
+                        <a class="join-link" href="#"><svg width="20" height="20">
+                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        </svg></a>
+                    </li>
+                    <li class="join-item">
+                        <a class="join-link" href="#"><svg width="20" height="20">
+                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        </svg></a>
+                    </li>
+                    <li class="join-item">
+                        <a class="join-link" href="#"><svg width="20" height="20">
+                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        </svg></a>
+                    </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
